<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.shiv.portfolioapp.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_text"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView" />

    <Button
        android:layout_width="225dp"
        android:layout_height="50dp"
        android:textSize="15sp"
        android:text="@string/spotify_streamer"
        android:id="@+id/spotify_streamer_button"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@color/colorButtonOrange"
        />

    <Button
        android:layout_width="225dp"
        android:layout_height="50dp"
        android:textSize="15sp"
        android:text="@string/score_app"
        android:id="@+id/score_app_button"
        android:layout_below="@+id/spotify_streamer_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/colorButtonOrange"
        />

    <Button
        android:layout_width="225dp"
        android:layout_height="50dp"
        android:textSize="15sp"
        android:text="@string/library_app"
        android:id="@+id/library_app_button"
        android:layout_below="@+id/score_app_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/colorButtonOrange"
        />

    <Button
        android:layout_width="225dp"
        android:layout_height="50dp"
        android:textSize="15sp"
        android:text="@string/build_it"
        android:id="@+id/build_it_button"
        android:layout_below="@+id/library_app_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/colorButtonOrange"
        />

    <Button
        android:layout_width="225dp"
        android:layout_height="50dp"
        android:textSize="15sp"
        android:text="@string/reader"
        android:id="@+id/reader_button"
        android:layout_below="@+id/build_it_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/colorButtonOrange"
        />

    <Button
        android:layout_width="225dp"
        android:layout_height="50dp"
        android:textSize="15sp"
        android:text="@string/capstone"
        android:id="@+id/capstone_button"
        android:layout_below="@+id/reader_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/colorButtonPink"
        android:textColor="@color/colorWhite"
        />

</RelativeLayout>
